src/components/responsive/responsive.css
/* LANDSCAPE TABLET VIEW */
/* .App.tablet-view {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}
.App.tablet-view .mbua-wrapper {
  width: 99vw;
  height: 99vh;
  overflow: hidden;
}

.App.tablet-view #mbua {
  align-items: center;
}

.App.tablet-view .slider-wrapper {
  position: relative;
  width: 31vw;
  height: 62vw;
  margin: 0px;
}

.App.tablet-view img.mbua-slider-img {
  height: 62vw;
  width: 62vw;
}

.App.tablet-view #mbua-first-column,
.App.tablet-view #mbua-second-column,
.App.tablet-view #mbua-third-column {
  height: 62vw;
  width: 31vw;
}
.App.tablet-view #mbua-fourth-column {
  height: 62vw;
  width: 7vw;
}
.App.tablet-view #mbua-third-column {
  padding: 0px;
  overflow-x: hidden;
}

.App.tablet-view .slider-wrapper.large-slider {
  width: 62vw;
}

.App.tablet-view .title {
  font-size: 1.15rem;
  font-weight: 500;
  margin: 0px 20px;
}

.App.tablet-view #main-menu li {
  margin-right: 20px;
}

.App.tablet-view #slider-counter {
  margin-right: 30px;
}
.App.tablet-view #Slider-buttons {
  bottom: 0px;
}
.App.tablet-view #plus-button-slider {
  right: -50px;
  bottom: 5px;
}
.App.tablet-view #ProfilesMenu {
  bottom: -1px;
  width: 31vw;
}
.App.tablet-view #mbua-third-column > #PagesWrapper:first-child {
  padding-left: 20px;
}
.App.tablet-view #main-menu > #main-menu-items {
  padding-bottom: 5px;
} */

/* ///// RESPONSIVE ////// */

@media all and (min-width: 1600px) {
  .mbua-wrapper {
    width: 1400px;
    height: 860px;
  }

  #main-menu > #main-menu-items {
    padding-inline-start: 10px;
  }
  body #login-form {
    max-width: initial;
  }
  body #login-form input {
    margin-left: 5px;
  }
  body #login-form button {
    padding: 5px;
  }
  body .login-third-column {
    padding-bottom: 50px;
  }
}

@media all and (min-width: 1100px) and (min-height: 676px) and (max-width: 1600px) {
  .mbua-wrapper {
    width: 1100px;
    height: 676px;
  }
  .title {
    font-size: 1.3rem;
    font-weight: 500;
  }
  body #mbua-first-column {
    width: 375px;
  }
  body #mbua-second-column,
  body #mbua-third-column {
    width: 315px;
  }
  body #mbua-third-column {
    height: 625px;
    margin-top: 20px;
    padding: 15px 25px 0px 25px;
  }
  body #mbua-fourth-column {
    width: 95px;
  }

  body #Feed ul {
    width: 265px;
    padding-top: 10px;
    margin-bottom: 0px;
  }
  body #contact-map {
    margin: 20px 0px;
    height: 265px;
    width: 265px;
  }
}
@media all and (max-width: 1099px) and (max-height: 676px) {
  
  body, .mbua-wrapper {
    width: 100vw;
    height: 100vh;
  }
  body img.mbua-slider-img {
    height: 600px;
    width: 600px;
  }
  body .slider-wrapper.large-slider {
    width: 600px;
  }
  body .slider-wrapper {
    position: fixed;
    z-index: 100;
    width: 300px;
    height: 600px;
    top: 50%;
    transform: translateY(-50%);
    margin: 0px;
  }
  body #mbua-first-column {
    width: 470px;
  }
  body .title {
    font-size: 1.1rem;
  }

  body #slider-counter {
    font-size: 1.2em;
  }
  body #main-menu li {
    margin-right: 20px;
  }
  body #ProfilesMenu {
    width: 258px;
  }
  body #ProfilesMenu li a {
    font-size: 0.85em;
  }
  body #Feed ul {
    bottom: 30px;
    width: 258px;
    margin-bottom: 0px;
    padding-top: 10px;
  }
  body #contact-map {
    margin: 20px 0px;
    height: 258px;
    width: 258px;
  }
  body p.pad-right-125 {
    padding-right: 50px;
  }
  body .App {
    font-size: 0.8em;
  }
  body .mbua-adress-card {
    font-size: 1.4em;
  }

}

